# fastapi_starter

./: pyproject.toml
