[project]
name = "backend"
version = "0.1.0"
description = "a fastapi starter utilizing docker, postgresql, and fastapi. PDM was used instead of poetry, however, its up to you whether to use Poetry or PDM."
authors = [
    {name = "ReAXET", email = "joshua.sturm@outlook.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
